--- a/package.xml
+++ b/package.xml
@@ -5,10 +5,9 @@
   <version>0.0.0</version>
   <description>a package for practice</description>
   <maintainer email="masamasa.d127@gmail.com">Masaki Daira</maintainer>
-  <license>BSD-#-Clause</license>
+  <license>BSD-3-Clause</license>
 
   <exec_depend>rclpy<exec_depend>
-  <exec_depend>std_msgs<exec_depend>
   <exec_depend>std_msgs<exec_depend>
 
   <test_depend>ament_copyright</test_depend>
